--- a/Lesson-02/2e.html
+++ b/Lesson-02/2e.html
@@ -1,1 +1,32 @@
-<button></button>
+
+<style>
+  .button-1{
+    background-color:rgb(10, 102, 194) ;
+    color: white;
+    border: none;
+    font-weight: bold;
+    height: 40px;
+    width:240px;
+    border-radius: 20px;
+    margin-right:  8px;
+    cursor: pointer;
+
+
+  }
+  .Save-button{
+    background-color: white;
+    color:rgb(10, 102, 194);
+    border-width: 1px;
+    border-style: solid;
+    border-color:rgb(10, 102, 194) ;
+    height: 40px;
+    width: 85px;
+    font-weight: bold;
+    font-size: 15px;
+    border-radius: 20px;
+    cursor: pointer;
+
+  }
+</style>
+<button class="button-1">Apply on company Website</button>
+<button class="Save-button">Save</button>
