--- a/practice/Lesson-03/button.html
+++ b/practice/Lesson-03/button.html
@@ -8,9 +8,14 @@
     border-radius: 2px;
     cursor: pointer;
     margin-right: 8px;
+    transition: opacity 0.15s;
   }
   .subscribe-button:hover{
-    background-color: green;
+    opacity: 0.8;
+  }
+
+  .subscribe-button:active{
+    opacity: 0.5;
   }
 
   .join-button {
@@ -23,6 +28,16 @@
     width: 62px;
     border-radius: 2px;
     cursor: pointer;
+    transition: background-color 0.15s,
+    color 0.15s;
+  }
+  .join-button:hover{
+    background-color: rgb(41, 118, 211);
+    color: white;
+  }
+
+  .join-button:active{
+    opacity:0.7;
   }
 
   .tweet-button {
@@ -37,6 +52,11 @@
     font-size: 15px;
     cursor: pointer;
     margin-left: 8px;
+    transition: box-shadow 0.15s ;
+  }
+
+  .tweet-button:hover{
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
   }
 </style>
 
