--- a/practice/Lesson-03/button.html
+++ b/practice/Lesson-03/button.html
@@ -3,8 +3,10 @@
     background-color: rgb(200, 0, 0);
     color: white;
     border: none;
-    height: 36px;
-    width: 105px;
+    padding-top:10px;
+    padding-bottom: 10px;
+    padding-left: 16px;
+    padding-right:16px;
     border-radius: 2px;
     cursor: pointer;
     margin-right: 8px;
@@ -20,19 +22,21 @@
 
   .join-button {
     background-color: white;
-    border-color: rgb(41, 118, 211);
+    border-color: rgb(6, 95, 212);
     border-style: solid;
     border-width: 1px;
-    color: rgb(41, 118, 211);
-    height: 36px;
-    width: 62px;
+    color: rgb(6, 95, 212);
     border-radius: 2px;
     cursor: pointer;
+    padding-top:9px;
+    padding-bottom: 9px;
+    padding-left: 16px;
+    padding-right:16px;
     transition: background-color 0.15s,
     color 0.15s;
   }
   .join-button:hover{
-    background-color: rgb(41, 118, 211);
+    background-color: rgb(6, 95, 212);
     color: white;
   }
 
@@ -41,11 +45,13 @@
   }
 
   .tweet-button {
-    background-color: rgb(2, 158, 255);
+    background-color: rgb(29, 155, 240);
     color: white;
     border: none;
-    height: 36px;
-    width: 74px;
+    padding-top:10px;
+    padding-bottom: 10px;
+    padding-left: 16px;
+    padding-right:16px;
     border-radius: 8px;
     border-radius: 18px;
     font-weight: bold;
