--- a/Youtube_Clone/index.html
+++ b/Youtube_Clone/index.html
@@ -15,15 +15,17 @@
 </head>
 
 <body>
-  <div class="header-section">
-    <div class="header-right">
-      <img class="menu-bar-icon" src="./Icons/menu-bar-icon.png" alt="Menu Bar">
+  <div class="header">
+    <div class="left-section">
+      <img class="menu-bar-icon" src="./Icons/hamburger-menu.svg" alt="Menu Bar">
       <img class="youtube-logo" src="./Icons/youtube-logo.svg" alt="YouTube-logo">
     </div>
-    <div class="header-left">
-      <p>this</p>
+    <div class="middle-section">
+      <input type="search" placeholder="search">
+      <img src="./Icons/" alt="">
+
     </div>
-    <div class="header-left">
+    <div class="right-section">
       <p>this is header left</p>
     </div>
   </div>
