youtube header left done

--- a/Youtube_Clone/index.html
+++ b/Youtube_Clone/index.html
@@ -21,8 +21,10 @@
       <img class="youtube-logo" src="./Icons/youtube-logo.svg" alt="YouTube-logo">
     </div>
     <div class="middle-section">
-      <input type="search" placeholder="search">
-      <img src="./Icons/" alt="">
+      <input class="search-bar" type="search" placeholder="search">
+      <button><img src="./Icons/" alt=""></button>
+      <button></button>
+
 
     </div>
     <div class="right-section">
