--- a/Youtube_Clone/index.html
+++ b/Youtube_Clone/index.html
@@ -7,9 +7,7 @@
   <title>YouTube</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&amp;display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="general.css">
 </head>
@@ -21,14 +19,21 @@
       <img class="youtube-logo" src="./Icons/youtube-logo.svg" alt="YouTube-logo">
     </div>
     <div class="middle-section">
-      <input class="search-bar" type="search" placeholder="search">
-      <button><img src="./Icons/" alt=""></button>
-      <button></button>
+      <input class="search-bar" type="text" placeholder="Search">
+      <button class="search-button"><img class="search-icon" src="./Icons/search.svg" alt="search-button"></button>
+      <button class="voice-search-button"><img src="./Icons/voice-search-icon.svg" alt=""></button>
 
 
     </div>
     <div class="right-section">
-      <p>this is header left</p>
+      <button class="create-button">
+        <span class="plus-symbol">add</span>
+        Create
+      </button>
+
+      <img class="notification-icon" src="./Icons/notifications.svg.svg" alt="notifications">
+
+      <img class="profile-icon" src="./Icons/profile icon.jpg" alt="profile-icon">
     </div>
   </div>
 
