--- a/Youtube_Clone/index.html
+++ b/Youtube_Clone/index.html
@@ -36,6 +36,14 @@
       <img class="profile-icon" src="./Icons/profile icon.jpg" alt="profile-icon">
     </div>
   </div>
+  <div>
+    <button>All</button>
+    <button>2</button>
+    <button>3</button>
+    <button>4</button>
+    <button>5</button>
+    <button>6</button><button>7</button><button>8</button>
+  </div>
 
 </body>
 
