--- a/Youtube_Clone/index.html
+++ b/Youtube_Clone/index.html
@@ -12,6 +12,8 @@
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="general.css">
+  <link rel="stylesheet" href="header.css">
+  <link rel="stylesheet" href="sidebar.css">
 </head>
 
 <body>
@@ -37,6 +39,10 @@
 
       <img class="profile-icon" src="./Icons/profile icon.jpg" alt="profile-icon">
     </div>
+  </div>
+  <div class="sidebar">
+
+
   </div>
   <div>
     <button>All</button>
