--- a/Youtube_Clone/index.html
+++ b/Youtube_Clone/index.html
@@ -43,6 +43,27 @@
   <div class="sidebar">
     <div>
 
+      <div class="sidebar-link">
+        <img class="home-icon" src="./Icons/Home-icon.png" alt="home icon">
+        <p class="icon-text">Home</p>
+      </div>
+      <div class="sidebar-link">
+        <img class="home-icon" src="./Icons/Home-icon.png" alt="home icon">
+        <p class="icon-text">Home</p>
+      </div>
+      <div class="sidebar-link">
+        <img class="home-icon" src="./Icons/Home-icon.png" alt="home icon">
+        <p class="icon-text">Home</p>
+      </div>
+      <div class="sidebar-link">
+        <img class="home-icon" src="./Icons/Home-icon.png" alt="home icon">
+        <p class="icon-text">Home</p>
+      </div>
+
+
+
+
+
     </div>
 
 
